2007-06-21  Kai Blin  <kai.blin@gmail.com>
	* __init__.py: Fix a non-ASCII whitespace
	* registry.py: don't try to load __init__.py as plugin

2007-06-21  Kai Blin  <kai.blin@gmail.com>
	* plugins/__init__.py: Make plugins a package to make distutils happy.
	* setup.py: Initial distutils installer.

2007-04-09  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/parser.py: Fix offset bug in <input> handling.

2007-03-12  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/parser.py: Raise NotImplementedError on not implemented
	  tags to avoid random errors caused by the old dom not matching the new dom
	* plugins/md3.py: Started working on the exporter.

2007-03-12  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/parser.py: Parse face normals and calculate vertex normals
	  from them.
	* dom.py: Faces have normals, too.

2007-03-12  Kai Blin  <kai.blin@gmail.com>
	* dom.py: fix the error case on id lookups.
	* collada_plugin/parser.py: Rewrite parts to adjust to the new DOM.

2007-03-07  Kai Blin  <kai.blin@gmail.com>
	* plugins/sear.py: Add importer.
	* ogrexml_plugin/parser.py: Store material as an ASCII string, not unicode.
	* plugins/info.py: Print info about the material

2007-03-07  Kai Blin  <kai.blin@gmail.com>
	* plugins/sear.py: Adjust to the new DOM.

2007-03-06  Kai Blin  <kai.blin@gmail.com>
	* dom.py: Throw away old DOM and start implementing a new one. Most plugins
	  will be broken now.
	* plugins/ogrexml.py, ogrexml_plugin/parser.py, ogrexml_plugin/parser.py:
	  Parse/generate Ogre3D mesh.xml files
	* plugins/info.py: Adjust to the new DOM.
	
2007-02-12  Kai Blin  <kai.blin@gmail.com>
	* plugins/sear.py: Add default texture name.

2007-02-12  Kai Blin  <kai.blin@gmail.com>
	* plugins/sear.py: Export more stuff.

2007-02-01  Kai Blin  <kai.blin@gmail.com>
	* plugins/info.py, dom.py: output information about faces.
	* plugins/sear.py: fix a typo
	* collada_plugin/generator.py: Remove pretty-printing for prims, as it produced
	  misleading output.
