@@ -9,6 +9,8 @@ setup(name='plunger',
       scripts=['plunger/plunger'],
       packages=['plunger', 'plunger.plugins', 'plunger.plugins.collada_plugin',
 	'plunger.plugins.ogrexml_plugin'],
+#      data_files=[('share/doc/plunger', ['AUTHORS', 'ChangeLog', 'COPYING', 'INSTALL',
+#                   'NEWS', 'TODO'])],
       classifiers=['Development Status :: 2 - Pre-Alpha',
                    'Environment :: Console',
                    'Intended Audience :: Developers',
